complement previous commit

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <link href="fonts/Material Icons/font.css" rel="stylesheet">
 <link href="fonts/Sui Generis V2/font.css" rel="stylesheet">
 </head>
-<center><img width="256px" class="img-fluid" src="./logotype.svg" title="Zoca/PRB" alt="Zoca/PRB"/><br/><img width="100px" src="./img/whale.svg"/><h1>The funniest whale, made since the 2000s</h1></center>
+<center><img width="256px" class="img-fluid" src="./logotype.svg" title="Zoca/PRB" alt="Zoca/PRB"/><br/><img width="100px" src="./img/whale.svg"/><h1>The funniest whale, made since the 2000s</h1>
+<a href="./press">Press/Media kit</a></center>
 
-<figure class="figure">
-  <img src="./img/image158.png" class="figure-img img-fluid rounded" alt="A biped smiling whale with 3 fingers in each hand, looking impressed.">
-  <figcaption class="figure-caption">A drawing of Zoca aka PRB made by Daniella Mesquita in 2010. <small>Used MS Paint + an app called "GradientFiller".</small></figcaption>
-</figure>
+<hr/>
+<p>Zoca's first-ever comic wasn't launched yet (but expected to kick-in on 2024), but you can subscribe for news by following me on Ethereum's Lens!</p>
+<a href="https://hey.xyz/u/danimesq" target="_blank"><button><img width="32px" src="./img/social/button/lens.svg"> Subscribe/Follow</button></a>
+<hr/>
 
 <h2>Backstory</h2>
 <h4>The drawing</h4>
@@ -33,13 +34,17 @@
 <img width="100px" src="https://danimesq.github.io/img/nostalgy/prb.png"/>
 <p>But with square eyes. Because it directly derived from the Tarobá TV's logo. <small>The above drawing was made in 2017 trying to reproduce the original PRB.</small></p>
 <p>Eventually, PRB's "Minecraft eyes" were rounded, while PRB's round body was slendered, so as happened to the chubby original Pikachu!</p>
+<figure class="figure">
+  <img src="./img/image158.png" class="figure-img img-fluid rounded" alt="A biped smiling whale with 3 fingers in each hand, looking impressed.">
+  <figcaption class="figure-caption">A drawing of Zoca aka PRB made by Daniella Mesquita in 2010. <small>Used MS Paint + an app called "GradientFiller".</small></figcaption>
+</figure>
 <h4>The name</h4>
 <p>Around 2004-2005, that whale was already made for comics. Going to the cover of a comic she made, Daniella needed to give it a name. "Square-eyes whale" wouldn't make sense anymore! Daniella decided to pick objects to get inspired for a name, until picking an AAAA or AAA battery. The coincident irony: in games, when players aren't feeling creative to make a nickname, it will be always an "AAA" name in the scoreboard!</p>
 <p>Daniella looked at this battery and its name was somewhat like "RTB", "TRB", etc. Then she decided this should be the name of the poor whale! Fortunately, a typo occurred and ended in "PRB". Daniella's dad, Wilson, helped "PRB" make sense: PRB = "Primeira Revista com Baleia" ("First Comic with a Whale"). Wilson even made PRB's first and only jingle!</p>
 
 <h2>Nowadays</h2>
 <h4>2010-2012</h4>
-<p>As PRB's design got improved, so was its name: Zoca. But, first, it was renamed to "Bart" (from the Portuguese "jubarte" of the humpback whale) back in 2010. No idea in what year it was changed from PRB to Zoca, from that year to present - but certainly was shortly after "Bart". "Zoca" is a homage to Daniella's father Wilson, who used the "Zoca" nickname when he was a bench player in the Brazillian Botafogo soccer team in his youth.</p>
+<p>As PRB's design got improved, so was its name: Zoca. But, first, it was renamed to "Bart" (from the Portuguese "jubarte" of the humpback whale) back in 2010. No idea in what year it was changed from PRB to Zoca, from that year to present - but certainly was shortly after "Bart". "Zoca" is an homage to Daniella's father Wilson, who used the "Zoca" nickname when he was a bench player in the Brazillian Botafogo soccer team in his youth.</p>
 <p>Let's call PRB "Zoca" from now onward! But let's still nickname him "PRB" occasionally 😜</p>
 
 <figure class="figure">
@@ -99,7 +104,7 @@
 <hr/>
 
 <p>Zoca's first-ever comic wasn't launched yet (but expected to kick-in on 2024), but you can subscribe for news by following me on Ethereum's Lens!</p>
-<a href="https://orb.club/p/0x04e14d" target="_blank"><button><img width="32px" src="./img/social/button/orb.svg"> Subscribe/Follow</button></a>
+<a href="https://hey.xyz/u/danimesq" target="_blank"><button><img width="32px" src="./img/social/button/lens.svg"> Subscribe/Follow</button></a>
 
 <hr/>
 <center><p>The <b>Zoca/PRB</b> site is part of <a href="https://danimesq.github.io/"><img alt="Daniella Mesquita" title="Daniella Mesquita" src="https://danimesq.com/press/press-kit/img/logotype-plain_black.svg" height="16px"></a>.</p>
