--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -73,6 +73,13 @@
 <br/><a href="./press/press-kit/img/logotype-plain_white.svg" target="_blank">SVG</a> | <a href="./press/press-kit/img/logotype-plain_white.png" target="_blank">PNG</a>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm">
+<h5>Logotype PRB</h5>
+<img width="315px" src="./press/press-kit/img/logotype-prb.svg">
+<br/><a href="./press/press-kit/img/logotype-prb.svg" target="_blank">SVG</a> | <a href="./press/press-kit/img/logotype-prb.png" target="_blank">PNG</a>
+    </div>
+  </div>
 </div>
 
 <!--<div class="container">
@@ -100,20 +107,21 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Icon</h5>
-<img width="256px" src="./press/press-kit/img/icon.svg">
-<br/><a href="./press/press-kit/img/icon.svg" target="_blank">SVG</a>
+<h5>Icon Plain</h5>
+<img width="256px" src="./press/press-kit/img/icon-plain.svg">
+<br/><a href="./press/press-kit/img/icon-plain.svg" target="_blank">SVG</a>
     </div>
 <!--    <div class="col-sm">
 <h5>Icon (old)Favicon</h5>
 <img width="16px" src="./favicon.png">
 <br/><a href="./favicon.png" target="_blank">PNG</a>
     </div>-->
-    <!--<div class="col-sm">
+    <div class="col-sm">
 <h5>Icon Original</h5>
-<img width="256px" src="./favicon.png">
+<!--<img width="256px" src="./favicon.png">-->
+<img width="176px" src="./favicon.png">
 <br/><a href="./favicon.png" target="_blank">PNG</a> | <a href="./favicon.ico" target="_blank">ICO</a> | <a href="./favicon.svg" target="_blank">SVG</a>
-    </div>-->
+    </div>
     <!--<div class="col-sm">
 <h5>Gamlr "G" White</h5>
 <img width="256px" src="./press/press-kit/img/g_white.svg">
