New sample story, this time explaining about localization

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 <p>About Zoca's 2020s comics being highly tied to Web3, not only the comics will be NFTs, but also most of the issue #1's stories will be about the Web3 and DeFi, such as the vectorized BW story bellow:</p>
 <a href="./img/samplesquares/6.svg" target="_blank"><img width="300px" src="./img/samplesquares/6.svg"/></a>
 <p>The story above depicts, aside Penelope/Agatha, Malandrinho (Naughty), PRB/Zoca's longtime rival created much before the 2020s and even the 2010s (as he can be seen in the 2010's "Prb antiquity" story).</p>
+<a href="./img/samplesquares/7.svg" target="_blank"><img width="300px" src="./img/samplesquares/7.svg"/></a>
+<p>Some stories won't appear for all languages. For example, that above where a parody of Bolsonaro is depicted. On our ReactJS comic viewer, only the PT-BR language should be able to see this page.</p>
 <hr/>
 
 <p>Zoca's first-ever comic wasn't launched yet (but expected to kick-in on 2024), but you can subscribe for news by following me on Ethereum's Lens!</p>
