fix img, now getting it from archive.is

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h4>The drawing</h4>
 <p>Between the ending of the 90s or begin of the 2000s, on <a href="https://danimesq.github.io/">Daniella Mesquita</a>'s early infancy, she was playing with drawing and using existing graphics as reference.</p>
 <p>One of these references was her home city's Tarobá TV logo:</p>
-<img width="100px" src="https://static.wikia.nocookie.net/logopedia/images/4/44/Tvtaroba1979.png/revision/latest?cb=20200410162158"/>
+<img width="100px" src="https://archive.is/MZ1T5/bfa7a3529aa2e998d183822ea93685c23c1e1aba.webp"/>
 <p>Trying to redraw and also to do a relecture of it, it ended in the "square-eyes whale", a precursor to PRB.</p>
 <p>Imagine this:</p>
 <img width="100px" src="https://danimesq.github.io/img/nostalgy/prb.png"/>
